--- a/index.html
+++ b/index.html
@@ -239,8 +239,9 @@ which is a two-dimensional object, we explore the 2d square frame set up. For
 
 <p class=Text><span lang=EN-US><img border=0 width=329 height=255
 id="image_10.png" src="projects_files/image006.jpg">&nbsp;&nbsp;&nbsp; <img border=0
-width=297 height=255 id="image_1-1.png" src="projects_files/image007.jpg">&nbsp;&nbsp;&nbsp;<iframe width = 600 height = 329 src = "https://youtu.be/FlIGZM4SpN4"></iframe>
-	</span></p>
+width=297 height=255 id="image_1-1.png" src="projects_files/image007.jpg">&nbsp;&nbsp;&nbsp;
+<iframe width = "600" height = "329" src = "https://youtu.be/FlIGZM4SpN4"></iframe>
+</span></p>
 
 <p class=Text><span lang=EN-US>&nbsp;&nbsp;&nbsp; (F) <i>Crystal structure
 electric charges form</i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
