--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 	{font-family:Consolas;
 	panose-1:2 11 6 9 2 2 4 3 2 4;}
 @font-face
-	{font-family:æ–¹æ­£å§šä½“;
+	{font-family:·½ÕýÒ¦Ìå;
 	panose-1:2 1 6 1 3 1 1 1 1 1;}
 @font-face
-	{font-family:"\@æ–¹æ­£å§šä½“";}
+	{font-family:"\@·½ÕýÒ¦Ìå";}
 @font-face
 	{font-family:"Rockwell Condensed";
 	panose-1:2 6 6 3 5 4 5 2 1 4;}
@@ -66,7 +66,7 @@ p.MsoTitle, li.MsoTitle, div.MsoTitle
 	text-transform:uppercase;
 	letter-spacing:.5pt;}
 a:link, span.MsoHyperlink
-	{font-family:æ–¹æ­£å§šä½“;
+	{font-family:·½ÕýÒ¦Ìå;
 	color:#005FCE;}
 p.Text, li.Text, div.Text
 	{mso-style-name:Text;
@@ -119,7 +119,7 @@ style='word-wrap:break-word'>
 lang=EN-US>Journeys</span></p>
 
 <p class=MsoTitle align=center style='text-align:center'><span lang=EN-US><img
-width=686 height=163 id="Picture 12" src="projects_files/image001.jpg"></span></p>
+width=686 height=163 id="Picture 12" src="index_files/image001.jpg"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
@@ -127,8 +127,8 @@ width=686 height=163 id="Picture 12" src="projects_files/image001.jpg"></span></
 
 <div style='border:solid #F1CBF0 3.0pt;padding:0cm 0cm 0cm 0cm;background:#F1CBF0'>
 
-<h2><span lang=EN-US style='color:black'>A simple simulation for Manhattan
-traffic</span></h2>
+<h2><b><span lang=EN-US style='color:black'>A simple simulation for Manhattan
+traffic</span></b></h2>
 
 </div>
 
@@ -143,8 +143,8 @@ descriptive model to the Manhattan traffic flow and some qualitative insights
 about the capacity of the grid system.</span></p>
 
 <p class=Text align=center style='text-align:center'><span lang=EN-US><img
-width=307 height=229 id="figure_0.png" src="projects_files/image002.gif">&nbsp;&nbsp;
-<img width=317 height=229 id="figure_5.png" src="projects_files/image003.gif"></span></p>
+width=307 height=229 id="figure_0.png" src="index_files/image002.gif">&nbsp;&nbsp;
+<img width=317 height=229 id="figure_5.png" src="index_files/image003.gif"></span></p>
 
 <p class=MsoCaption align=center style='text-align:center'><span lang=EN-US>Figure
 </span><span lang=EN-US>1</span><span lang=EN-US> Distribution of car number in
@@ -167,8 +167,9 @@ href="https://github.com/Eleven7825/manhattan/blob/main/manhattan.pdf">https://g
 
 <div style='border:solid #F1CBF0 3.0pt;padding:0cm 0cm 0cm 0cm;background:#F1CBF0'>
 
-<h2><span lang=EN-US style='color:black'>Comparison Between Non-deterministic
-Model and Deterministic Model for Malaria and Sickle-Cell Hemoglobin Gene</span></h2>
+<h2><b><span lang=EN-US style='color:black'>Comparison Between
+Non-deterministic Model and Deterministic Model for Malaria and Sickle-Cell
+Hemoglobin Gene</span></b></h2>
 
 </div>
 
@@ -183,9 +184,9 @@ Moreover, as the infection rate of malaria gets larger, the ratio of resistant
 to malaria also gets larger as the result of natural selection.</span></p>
 
 <p class=Text align=center style='text-align:center'><span lang=EN-US><img
-border=0 width=324 height=274 id="figure_8.png"
-src="projects_files/image004.gif">&nbsp;&nbsp; <img border=0 width=348
-height=273 id="figure_13-2.png" src="projects_files/image005.gif"></span></p>
+border=0 width=324 height=274 id="figure_8.png" src="index_files/image004.gif">&nbsp;&nbsp;
+<img border=0 width=348 height=273 id="figure_13-2.png"
+src="index_files/image005.gif"></span></p>
 
 <p class=MsoCaption align=center style='text-align:center'><span lang=EN-US>Figure
 </span><span lang=EN-US>3</span><span lang=EN-US> As two diseases developed,
@@ -223,7 +224,7 @@ justify the functions we choose for the three rates are suitable through data
 fitting and error testing using MATLAB tool packages.</span></p>
 
 <p class=Text align=center style='text-align:center'><span lang=EN-US><img
-border=0 width=633 height=199 id=fungi.jpg src="projects_files/image006.jpg"></span></p>
+border=0 width=633 height=199 id=fungi.jpg src="index_files/image006.jpg"></span></p>
 
 <p class=MsoCaption align=center style='text-align:center'><span lang=EN-US>Figure
 </span><span lang=EN-US>5</span><span lang=EN-US> Two different kinds of fungi
@@ -235,7 +236,7 @@ page:</span></b><span lang=EN-US> <a href="https://github.com/Eleven7825/fungi">
 
 <p class=Text align=center style='text-align:center'><b><span lang=EN-US>Report:</span></b><span
 lang=EN-US> <a href="https://github.com/Eleven7825/fungi/blob/main/2112048.pdf">fungi/2112048.pdf
-at main Â· Eleven7825/fungi</a></span></p>
+at main ¡¤ Eleven7825/fungi</a></span></p>
 
 <p class=Text><span lang=EN-US>&nbsp;</span></p>
 
@@ -246,9 +247,9 @@ Problem with Different Frames</span></b></h2>
 
 </div>
 
-<p class=Text><span lang=EN-US>Thomsonâ€™s problem is determined the ground state
+<p class=Text><span lang=EN-US>Thomson¡¯s problem is determined the ground state
 of N electric charges on constrained in a sphere shell given the repelling
-effect given by Coulombâ€™s law. By comparing the simulation result and continuum
+effect given by Coulomb¡¯s law. By comparing the simulation result and continuum
 theory, M. Bowick et al. find out the crystalline structure in the ground state
 for the Thomson problem. In the meanwhile, Y. Levin and J. J. Arenzon
 generalized the Thomson problem replacing the sphere shell with a sphere. They
@@ -262,8 +263,8 @@ which is a two-dimensional object, we explore the 2d square frame set up. For
 
 <p class=Text align=center style='text-align:center;page-break-after:avoid'><span
 lang=EN-US>&nbsp; <img border=0 width=329 height=255 id="image_10.png"
-src="projects_files/image007.jpg">&nbsp;&nbsp;&nbsp;<img border=0 width=297
-height=255 id="image_1-1.png" src="projects_files/image008.jpg"></span></p>
+src="index_files/image007.jpg">&nbsp;&nbsp;&nbsp;<img border=0 width=297
+height=255 id="image_1-1.png" src="index_files/image008.jpg"></span></p>
 
 <p class=MsoCaption align=center style='text-align:center'><span lang=EN-US>Figure
 </span><span lang=EN-US>6</span><span lang=EN-US> Crystal structure electric
@@ -299,7 +300,7 @@ Tang, Shuhan Yuan</span></p>
 <p class=Text><span lang=EN-US>The speed that a car can maintain on rainy days
 depends on many factors. This project will first introduce a model to quantify
 the visibility of the driver using the ratio between the surface area of all
-raindrops on windshield and the area of the windshield. In addition to driverâ€™s
+raindrops on windshield and the area of the windshield. In addition to driver¡¯s
 comfortability of visibility, we also take the sudden brake, sleep-deprived
 driving, road condition and light change, into the safe speed consideration. In
 this project, we build a model to compute the safe speed of the car under
@@ -308,8 +309,8 @@ provide a concrete and useful insight into this problem.</span></p>
 
 <p class=Text align=center style='text-align:center;page-break-after:avoid'><span
 lang=EN-US>&nbsp;<img border=0 width=287 height=257 id="Rf_vs_safe_v_car.png"
-src="projects_files/image009.jpg">&nbsp;&nbsp; <img border=0 width=315
-height=260 id="Ss_vs_Rf_v_car.png" src="projects_files/image010.jpg"></span></p>
+src="index_files/image009.jpg">&nbsp;&nbsp; <img border=0 width=315 height=260
+id="Ss_vs_Rf_v_car.png" src="index_files/image010.jpg"></span></p>
 
 <p class=MsoCaption align=center style='text-align:center'><span lang=EN-US>Figure
 </span><span lang=EN-US>8</span><span lang=EN-US> Our final result -
@@ -338,11 +339,12 @@ in PLU Factorization</span></b></h2>
 
 <p class=MsoNormal><span lang=EN-US>with Leonardo T. Rolla</span></p>
 
-<p class=Text><span lang=EN-US>We develop a new flop tool which can help to
-count floating-point operation(flops) in MATLAB/GNU Octave. The first two
-sections describe the flops and PLU factorization. In the following sections,
-we introduce the PLU factorization â€” a method for solving linear equations. We
-discuss several possible ways to count flops on a PLU factorization script in MATLAB/Octave.
+<p class=Text style='text-align:justify;text-justify:inter-ideograph'><span
+lang=EN-US>We develop a new flop tool which can help to count floating-point
+operation(flops) in MATLAB/GNU Octave. The first two sections describe the
+flops and PLU factorization. In the following sections, we introduce the PLU
+factorization ¡ª a method for solving linear equations. We discuss several
+possible ways to count flops on a PLU factorization script in MATLAB/Octave.
 One way we tried is using the flop tool developed by Hang Qian. Although his
 tool does not give us the correct result due to its limitation on counting
 operations involving varying variable sizes, his code gives the flop count
@@ -350,9 +352,7 @@ formulas we needed in developing the new tool. Our new tool is compatible with
 GNU Octave and it is licensed under GNU LGPL.</span></p>
 
 <p class=Text><b><span lang=EN-US>Report</span></b><span lang=EN-US>: <a
-href="https://github.com/Eleven7825/flopTool/blob/master/flop%2520count%2520tool%2520with%2520PLU%2520example.pdf">https://github.com/Eleven7825/flopTool/blob/master/flop20count20tool20withPLUexample.pdf</a></span></p>
-
-<p class=Text><span lang=EN-US>&nbsp;</span></p>
+href="https://github.com/Eleven7825/flopTool/blob/master/flop%20count%20tool%20with%20PLU%20example.pdf">https://github.com/Eleven7825/flopTool/blob/master/flop%20count%20tool%20with%20PLU%20example.pdf</a></span></p>
 
 <div style='border:solid #F1CBF0 3.0pt;padding:0cm 0cm 0cm 0cm;background:#F1CBF0'>
 
@@ -373,7 +373,7 @@ factorization. The resulting linear solver is given in the conclusion part.</spa
 
 <p class=Text align=center style='text-align:center;page-break-after:avoid'><span
 lang=EN-US><img border=0 width=731 height=299
-id="big_plot-eps-converted-to-1536x661.png" src="projects_files/image011.gif"></span></p>
+id="big_plot-eps-converted-to-1536x661.png" src="index_files/image011.gif"></span></p>
 
 <p class=MsoCaption align=center style='text-align:center'><span lang=EN-US>Figure
 </span><span lang=EN-US>10</span><span lang=EN-US> Iterations required for CG
@@ -381,7 +381,7 @@ and SD algorithm to converge under different condition numbers.</span></p>
 
 <p class=Text align=center style='text-align:center'><b><span lang=EN-US>Report:</span></b><span
 lang=EN-US> <a
-href="https://github.com/Eleven7825/solveLinearSystem/blob/master/An%2520Overview%2520on%2520Linear%2520Solvers.pdf">https://github.com/Eleven7825/solveLinearSystem/blob/master/AnOverviewonLinearSolvers.pdf</a></span></p>
+href="https://github.com/Eleven7825/solveLinearSystem/blob/master/An%20Overview%20on%20Linear%20Solvers.pdf">https://github.com/Eleven7825/solveLinearSystem/blob/master/An%20Overview%20on%20Linear%20Solvers.pdf</a></span></p>
 
 <p class=Text><span lang=EN-US>&nbsp;</span></p>
 
@@ -395,7 +395,7 @@ href="https://github.com/Eleven7825/solveLinearSystem/blob/master/An%2520Overvie
 
 <p class=Text><span lang=EN-US>Power Method (PM) allows us to find the largest
 eigenvalue of real square matrices. By changing the algorithm of PM, the
-resulting algorithm â€“ Inverse Power Method (IPM) enables us to find the
+resulting algorithm ¨C Inverse Power Method (IPM) enables us to find the
 eigenvalues other than the largest one. In this report, we firstly describe the
 IPM and code it in MATLAB/Octave. To test the new function of IPM, we elaborate
 on how IPM allows us to find eigenvalues closest to a point for symmetric matrices.
@@ -404,8 +404,9 @@ symmetric matrices using the IPM and the searching scheme we devised. The
 method succeeded in finding all the 10 largest eigenvalues of 30 by 30 random
 symmetric positive matrices in 98.4% sampled randomly.</span></p>
 
-<p class=Text><b><span lang=EN-US>Report</span></b><span lang=EN-US>: <a
-href="https://github.com/Eleven7825/IPM/blob/main/Finding%2520few%2520largest%2520eigenvalues.pdf">https://github.com/Eleven7825/IPM/blob/main/Finding%20few%20largest%20eigenvalues.pdf</a></span></p>
+<p class=Text align=center style='text-align:center'><b><span lang=EN-US>Report</span></b><span
+lang=EN-US>: <a
+href="https://github.com/Eleven7825/IPM/blob/main/Finding%20few%20largest%20eigenvalues.pdf">https://github.com/Eleven7825/IPM/blob/main/Finding%20few%20largest%20eigenvalues.pdf</a></span></p>
 
 </div>
 
