--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@ Problem with Different Frames</span></b></h2>
 
 </div>
 
-<p class=Text><span lang=EN-US>Thomson’s problem is determined the ground state
+<p class=Text><span lang=EN-US>Thomson's problem is determined the ground state
 of N electric charges on constrained in a sphere shell given the repelling
-effect given by Coulomb’s law. By comparing the simulation result and continuum
+effect given by Coulomb's law. By comparing the simulation result and continuum
 theory, M. Bowick et al. find out the crystalline structure in the ground state
 for the Thomson problem. In the meanwhile, Y. Levin and J. J. Arenzon
 generalized the Thomson problem replacing the sphere shell with a sphere. They
@@ -299,7 +299,7 @@ Tang, Shuhan Yuan</span></p>
 <p class=Text><span lang=EN-US>The speed that a car can maintain on rainy days
 depends on many factors. This project will first introduce a model to quantify
 the visibility of the driver using the ratio between the surface area of all
-raindrops on windshield and the area of the windshield. In addition to driver’s
+raindrops on windshield and the area of the windshield. In addition to driver's
 comfortability of visibility, we also take the sudden brake, sleep-deprived
 driving, road condition and light change, into the safe speed consideration. In
 this project, we build a model to compute the safe speed of the car under
@@ -342,7 +342,7 @@ in PLU Factorization</span></b></h2>
 lang=EN-US>We develop a new flop tool which can help to count floating-point
 operation(flops) in MATLAB/GNU Octave. The first two sections describe the
 flops and PLU factorization. In the following sections, we introduce the PLU
-factorization — a method for solving linear equations. We discuss several
+factorization - a method for solving linear equations. We discuss several
 possible ways to count flops on a PLU factorization script in MATLAB/Octave.
 One way we tried is using the flop tool developed by Hang Qian. Although his
 tool does not give us the correct result due to its limitation on counting
@@ -394,7 +394,7 @@ href="https://github.com/Eleven7825/solveLinearSystem/blob/master/An%20Overview%
 
 <p class=Text><span lang=EN-US>Power Method (PM) allows us to find the largest
 eigenvalue of real square matrices. By changing the algorithm of PM, the
-resulting algorithm – Inverse Power Method (IPM) enables us to find the
+resulting algorithm - Inverse Power Method (IPM) enables us to find the
 eigenvalues other than the largest one. In this report, we firstly describe the
 IPM and code it in MATLAB/Octave. To test the new function of IPM, we elaborate
 on how IPM allows us to find eigenvalues closest to a point for symmetric matrices.
