--- a/index.html
+++ b/index.html
@@ -269,9 +269,12 @@ height=255 id="image_1-1.png" src="index_files/image008.jpg"></span></p>
 </span><span lang=EN-US>6</span><span lang=EN-US> Crystal structure electric
 charges form in a 2d frame.&nbsp; </span></p>
 
-<video width="320" height="240" controls>
-  <source src="index_files/Dr_0.1.mp4" type="video/mp4">
+<p align=center style='text-align:center'>
+<video width="320" height="240" controls loop>
+  <source src="index_files/Dr_0.1_rotate.mp4" type="video/mp4">
 </video>
+</p>
+
 
 <p class=MsoCaption align=center style='text-align:center'><span lang=EN-US>Figure
 </span><span lang=EN-US>7</span><span lang=EN-US> 3d simulation result using 12
