add videos captions

--- a/index.html
+++ b/index.html
@@ -143,15 +143,17 @@ about the capacity of the grid system.</span></p>
 
 <p class=Text align=center style='text-align:center'><span lang=EN-US><img
 width=307 height=229 id="figure_0.png" src="index_files/image002.gif">&nbsp;&nbsp;
-<img width=317 height=229 id="figure_5.png" src="index_files/image003.gif"></span></p>
+<img width=317 height=229 id="figure_5.png" src="index_files/image003.gif"><video width = 307 height=229 controls loop>
+	<source src="index_files/rate=0.300000.mp4" type="video/mp4">
+</video></span></p>
 
-<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US>Figure
-</span><span lang=EN-US>1</span><span lang=EN-US> Distribution of car number in
-the system with different incoming rate.</span></p>
+<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US> Distribution of car number in
+the system with different incoming rate (first).</span></p>
 
-<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US>Figure
-</span><span lang=EN-US>2</span><span lang=EN-US> The limit of incoming rate
-when congestion occurs.</span></p>
+<p class=MsoCaption align=center style='text-align:center'> <span lang=EN-US> The limit of incoming rate
+when congestion occurs (second).</span></p>
+
+<p class=MsoCaption align=center style='text-align:center'> <span lang=EN-US> How cars move when incoming rate is relatively low (third).</span></p>
 
 <p class=Text align=center style='text-align:center'><b><span lang=EN-US>Project
 page</span></b><span lang=EN-US>: <a
@@ -160,7 +162,7 @@ simulation for Manhattan traffic </a></span></p>
 
 <p class=Text align=center style='text-align:center'><b><span lang=EN-US>Report</span></b><span
 lang=EN-US>: <a
-href="https://github.com/Eleven7825/manhattan/blob/main/manhattan.pdf">https://github.com/Eleven7825/manhattan/blob/main/manhattan.pdf</a></span></p>
+href="./pdfs/manhattan.pdf"> here</a></span></p>
 
 <p class=Text><span lang=EN-US>&nbsp;</span></p>
 
@@ -187,20 +189,18 @@ border=0 width=324 height=274 id="figure_8.png" src="index_files/image004.gif">&
 <img border=0 width=348 height=273 id="figure_13-2.png"
 src="index_files/image005.gif"></span></p>
 
-<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US>Figure
-</span><span lang=EN-US>3</span><span lang=EN-US> As two diseases developed,
-the growth rate for the whole population settled into a stable value.</span></p>
+<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US> As two diseases developed,
+the growth rate for the whole population settled into a stable value(first).</span></p>
 
-<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US>Figure
-</span><span lang=EN-US>4</span><span lang=EN-US> The population of
-susceptible, infected, and resistant settle down to exponential growth.</span></p>
+<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US> The population of
+susceptible, infected, and resistant settle down to exponential growth(second).</span></p>
 
 <p class=Text align=center style='text-align:center'><b><span lang=EN-US>Project
 page</span></b><span lang=EN-US>: <a
 href="https://github.com/Eleven7825/malaria-sickle-cell">https://github.com/Eleven7825/malaria-sickle-cell</a></span></p>
 
 <p class=Text align=center style='text-align:center'><b><span lang=EN-US>Report</span></b><span
-lang=EN-US>: <a href="https://github.com/Eleven7825/malaria-sickle-cell">https://github.com/Eleven7825/malaria-sickle-cell</a></span></p>
+lang=EN-US>: <a href="./pdfs/malaria.pdf"> here</a></span></p>
 
 <p class=Text><span lang=EN-US>&nbsp;</span></p>
 
@@ -225,17 +225,22 @@ fitting and error testing using MATLAB tool packages.</span></p>
 <p class=Text align=center style='text-align:center'><span lang=EN-US><img
 border=0 width=633 height=199 id=fungi.jpg src="index_files/image006.jpg"></span></p>
 
-<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US>Figure
-</span><span lang=EN-US>5</span><span lang=EN-US> Two different kinds of fungi
+<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US> Two different kinds of fungi
 compete to survive.</span></p>
+
+<p align=center style='text-align:center'>
+<video width="640" height="380" controls loop>
+  <source src="index_files/decompose.mp4" type="video/mp4">
+</video>
+</p>
+<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US> Simulated processs for decomposition.</span></p>
 
 <p class=Text align=center style='text-align:center'><b><span lang=EN-US>Project
 page:</span></b><span lang=EN-US> <a href="https://github.com/Eleven7825/fungi">Eleven7825/fungi:
 2021 mcm a </a></span></p>
 
 <p class=Text align=center style='text-align:center'><b><span lang=EN-US>Report:</span></b><span
-lang=EN-US> <a href="https://github.com/Eleven7825/fungi/blob/main/2112048.pdf">fungi/2112048.pdf
-at main · Eleven7825/fungi</a></span></p>
+lang=EN-US> <a href="./pdfs/2112048.pdf"> here</a></span></p>
 
 <p class=Text><span lang=EN-US>&nbsp;</span></p>
 
@@ -261,24 +266,22 @@ which is a two-dimensional object, we explore the 2d square frame set up. For
 3d simulation, the charges are allowed to move inside of the sphere.</span></p>
 
 <p class=Text align=center style='text-align:center;page-break-after:avoid'><span
-lang=EN-US>&nbsp; <img border=0 width=329 height=255 id="image_10.png"
-src="index_files/image007.jpg">&nbsp;&nbsp;&nbsp;<img border=0 width=297
-height=255 id="image_1-1.png" src="index_files/image008.jpg"></span></p>
+lang=EN-US>&nbsp; 
+<video width="400" height="297" controls loop>
+  <source src="index_files/Dr_5e-02_q0_1e-08.mp4" type="video/mp4">
+</video>&nbsp;&nbsp;&nbsp;<video width="250" height="297" controls loop>
+  <source src="index_files/Dr_1e-01_q0_1e-07_scaled.mp4" type="video/mp4">
+</video></span></p>
 
-<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US>Figure
-</span><span lang=EN-US>6</span><span lang=EN-US> Crystal structure electric
-charges form in a 2d frame.&nbsp; </span></p>
+<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US> Crystal structure electric
+charges form in a 2d frame(left) 3d simulation result with a spherical frame(right).&nbsp; </span></p>
 
 <p align=center style='text-align:center'>
-<video width="320" height="240" controls loop>
+<video width="640" height="480" controls loop>
   <source src="index_files/Dr_0.1_rotate.mp4" type="video/mp4">
 </video>
 </p>
-
-
-<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US>Figure
-</span><span lang=EN-US>7</span><span lang=EN-US> 3d simulation result using 12
-electric charges, each vertex represents one of them.</span></p>
+<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US> Simulation result with 1000 charges in 3d.&nbsp; </span></p>
 
 <p class=Text align=center style='text-align:center'><b><span lang=EN-US>Project
 page</span></b><span lang=EN-US>: <a
@@ -289,7 +292,7 @@ href="https://github.com/Eleven7825/electron-problem">https://github.com/Eleven7
 
 <p class=Text align=center style='text-align:center'><b><span lang=EN-US>Report</span></b><span
 lang=EN-US>: <a
-href="https://github.com/Eleven7825/electron-problem-3d/blob/main/electron_problem%2520_final.pdf">https://github.com/Eleven7825/electron-problem-3d/blob/main/electron_problem%20_final.pdf</a></span></p>
+href="./pdfs/electron_problem _final.pdf"> here</a></span></p>
 
 <p class=Text><span lang=EN-US>&nbsp;</span></p>
 
@@ -314,17 +317,14 @@ real-life considerations by combining mathematical and physical knowledge to
 provide a concrete and useful insight into this problem.</span></p>
 
 <p class=Text align=center style='text-align:center;page-break-after:avoid'><span
-lang=EN-US>&nbsp;<img border=0 width=287 height=257 id="Rf_vs_safe_v_car.png"
-src="index_files/image009.jpg">&nbsp;&nbsp; <img border=0 width=315 height=260
-id="Ss_vs_Rf_v_car.png" src="index_files/image010.jpg"></span></p>
+lang=EN-US>&nbsp;<img border=0 width=315 height=260
+id="Ss_vs_Rf_v_car.png" src="index_files/image010.jpg">&nbsp;&nbsp;&nbsp;
+</video>&nbsp;&nbsp;&nbsp;<video width="515" height="260" controls loop autoplay>
+  <source src="index_files/v_0_f_0.5_Rf_0.01.mp4" type="video/mp4">
+</video></span></p>
 
-<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US>Figure
-</span><span lang=EN-US>8</span><span lang=EN-US> Our final result -
-relationship between the safe speed and the precipitation</span></p>
-
-<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US>Figure
-</span><span lang=EN-US>9</span><span lang=EN-US> The amount of rain will
-receive with different car speeds and precipitations.</span></p>
+<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US> The amount of rain will
+receive with different car speeds and precipitations(first), how the front window looks like when car speed is small(second).</span></p>
 
 <p class=Text align=center style='text-align:center'><b><span lang=EN-US>Project
 Page</span></b><span lang=EN-US>: <a
@@ -332,7 +332,7 @@ href="https://github.com/Eleven7825/Rainfall_simulator">https://github.com/Eleve
 
 <p class=Text align=center style='text-align:center'><b><span lang=EN-US>Report</span></b><span
 lang=EN-US>: <a
-href="https://github.com/Eleven7825/Rainfall_simulator/blob/main/main.pdf">https://github.com/Eleven7825/Rainfall_simulator/blob/main/main.pdf</a></span></p>
+href="./pdfs/malaria.pdf"> here</a></span></p>
 
 <p class=Text><span lang=EN-US>&nbsp;</span></p>
 
@@ -358,7 +358,7 @@ formulas we needed in developing the new tool. Our new tool is compatible with
 GNU Octave and it is licensed under GNU LGPL.</span></p>
 
 <p class=Text><b><span lang=EN-US>Report</span></b><span lang=EN-US>: <a
-href="https://github.com/Eleven7825/flopTool/blob/master/flop%20count%20tool%20with%20PLU%20example.pdf">https://github.com/Eleven7825/flopTool/blob/master/flop%20count%20tool%20with%20PLU%20example.pdf</a></span></p>
+href="./pdfs/flop count tool with PLU example.pdf"> here</a></span></p>
 
 <div style='border:solid #F1CBF0 3.0pt;padding:0cm 0cm 0cm 0cm;background:#F1CBF0'>
 
@@ -381,13 +381,12 @@ factorization. The resulting linear solver is given in the conclusion part.</spa
 lang=EN-US><img border=0 width=731 height=299
 id="big_plot-eps-converted-to-1536x661.png" src="index_files/image011.gif"></span></p>
 
-<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US>Figure
-</span><span lang=EN-US>10</span><span lang=EN-US> Iterations required for CG
+<p class=MsoCaption align=center style='text-align:center'><span lang=EN-US> Iterations required for CG
 and SD algorithm to converge under different condition numbers.</span></p>
 
 <p class=Text align=center style='text-align:center'><b><span lang=EN-US>Report:</span></b><span
 lang=EN-US> <a
-href="https://github.com/Eleven7825/solveLinearSystem/blob/master/An%20Overview%20on%20Linear%20Solvers.pdf">https://github.com/Eleven7825/solveLinearSystem/blob/master/An%20Overview%20on%20Linear%20Solvers.pdf</a></span></p>
+href="./pdfs/An Overview on Linear Solvers.pdf"> here</a></span></p>
 
 <p class=Text><span lang=EN-US>&nbsp;</span></p>
 
@@ -412,7 +411,7 @@ symmetric positive matrices in 98.4% sampled randomly.</span></p>
 
 <p class=Text align=center style='text-align:center'><b><span lang=EN-US>Report</span></b><span
 lang=EN-US>: <a
-href="https://github.com/Eleven7825/IPM/blob/main/Finding%20few%20largest%20eigenvalues.pdf">https://github.com/Eleven7825/IPM/blob/main/Finding%20few%20largest%20eigenvalues.pdf</a></span></p>
+href="./pdfs/Finding few largest eigenvalues.pdf"> here</a></span></p>
 
 </div>
 
